# ml-agent-evaluator

./: .gitignore  .gitmodules  ACKNOWLEDGEMENTS  LICENSE  LICENSE_DATA  README.md  pyproject.toml
data/: prepare.py
data/examples/: example-truthfulqa.csv
data/human/: arduin-long-form-factuality-20240806-2255_(uep-119589).csv  arduin-long-form-factuality-20240813-20240814-1240_(uep-120627).csv
data/testing/result_0211_truthfulqa_test/: multirun.yaml
exp/configs/0001_truthful_qa_openai_test/: config.yaml
notebooks/data_parsing/: 0010_rewardbench.ipynb  0015_truthful-qa_parsing.ipynb  0020_longfact_pairwise.ipynb  0030_human_parsing.ipynb  0031_human_parsing_up_to_100.ipynb  0032_human_parsing_combined.ipynb  0040_code_apps.ipynb  0120_data_fitlering_effect_longfact.ipynb  longfact_hashed_prompts.py
notebooks/experimental_results/: 0010_humaneval_python.ipynb  0020_replot_experimental_results.ipynb  0030_better_plots.ipynb  0050_overall_rewardbench_scores.ipynb  0060_virtual_agent.ipynb  0060_virtual_agent_internal_fact.ipynb  0062_virtual_agent_gsm8k.ipynb  0063_virtual_agent_general.ipynb  0070_replot_combined_human.ipynb  0080_apps_replot.ipynb  0110_paper_replot_from_pres.ipynb  nightly_run.sh
notebooks/tutorials/: 0000_demo_evaluator_usage.ipynb  0001_demo_experiment.ipynb  0002_cost_estimate.ipynb  0003_result_replotting.ipynb  0004_creating_synthetic_agents.ipynb  0005_paper_experiments_and_plotting.ipynb  0006_generating_jsonl_for_human_annotation.ipynb
src/ageval/: constants.py  utils.py
src/ageval/models/: core.py  (+5 more)
tests/: test_evaluators_safe.py
(+92 files in other folders)
